# BaseTCPServer

./: .gitignore  BaseTCPServer.cpp  BaseTCPServer.h  BaseTCPServer.sln  BaseTCPServer.vcxproj  BaseTCPServer.vcxproj.filters  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
Tests/: CMakeLists.txt  main.cpp  requirements.txt  tests.py
docs/: _base_t_c_p_server_8cpp.html  _base_t_c_p_server_8h.html  _base_t_c_p_server_8h_source.html  _web_exception_8cpp.html  _web_exception_8h.html  _web_exception_8h_source.html  _web_server_exception_8cpp.html  _web_server_exception_8h.html  _web_server_exception_8h_source.html  annotated.html  classes.html  classweb_1_1_base_t_c_p_server-members.html  classweb_1_1_base_t_c_p_server.html  classweb_1_1exceptions_1_1_web_exception-members.html  classweb_1_1exceptions_1_1_web_exception.html  classweb_1_1exceptions_1_1_web_server_exception-members.html  classweb_1_1exceptions_1_1_web_server_exception.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  menudata.js  namespaces.html  namespaceweb.html  namespaceweb_1_1exceptions.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_4.js  variables_5.js  variables_8.js
include/: BaseTCPServer.h  WebServerException.h
src/: BaseTCPServer.cpp  BaseTCPServer.h  ClientData.cpp  ClientData.h  WebException.cpp  WebException.h  WebServerException.cpp
